--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,8 @@
     <title>index</title>
 </head>
 <body>
-<a href="#">회원가입</a>
-<a href="#">로그인</a>
+<a href="/member/reg-member">회원가입</a>
+<a href="/member/login">로그인</a>
 <a href="#">글목록</a>
 </body>
 </html>
