--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html lang="kr" xmlns:th="http://www.thymeleaf.org">
-<head>
+<th:block th:fragment="header">
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <div class="p-3 text-bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"/>
+                    </svg>
+                </a>
 
-</body>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="/board/save" class="nav-link px-2 text-white">글작성</a></li>
+                    <li><a href="/board/" class="nav-link px-2 text-white">글목록</a></li>
+                </ul>
+
+                <form action="/board/search" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <div class="input-group">
+                        <select name="type" class="form-select">
+                            <option value="boardTitle" selected>제목</option>
+                            <option value="boardWriter">작성자</option>
+                            <option value="all">모두</option>
+                        </select>
+                        <input type="search" name="q" class="form-control form-control-dark text-bg-dark"
+                               placeholder="Search..."
+                               aria-label="Search">
+                        <button class="btn btn-outline-light"><i class="bi bi-search"></i></button>
+                    </div>
+                </form>
+
+                <th:block th:if="${#session.getAttribute('member') == null}">
+                    <button type="button" class="btn btn-outline-light me-2">로그인</button>
+                    <button type="button" class="btn btn-warning">회원가입</button>
+                </th:block>
+                <th:block th:unless="${#session.getAttribute('member') == null}">
+                    <input type="url" th:value="${#session.getAttribute('member')}">
+                    <input type="button" value="로그아웃">
+                </th:block>
+                <div class="text-end">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 </html>
