--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
 <a href="/member/reg-member">회원가입</a>
 <a href="/member/login">로그인</a>
-<a href="#">글목록</a>
+<a href="/board/">글목록</a>
 </body>
 </html>
