--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -33,13 +33,15 @@
                     </div>
                 </form>
 
-                <th:block th:if="${#session.getAttribute('member') == null}">
+                <th:block th:if="${session.MEMBER_ID == null}">
                     <button type="button" class="btn btn-outline-light me-2">로그인</button>
                     <button type="button" class="btn btn-warning">회원가입</button>
                 </th:block>
-                <th:block th:unless="${#session.getAttribute('member') == null}">
-                    <input type="url" th:value="${#session.getAttribute('member')}">
-                    <input type="button" value="로그아웃">
+                <th:block th:unless="${session.MEMBER_ID == null}">
+                    <input type="button" class="btn btn-link" th:value="${session.MEMBER_NAME} + ' 님'">
+                    <form th:action="@{/member/logout}" method="post">
+                        <input type="submit" class="btn btn-outline-info" value="로그아웃">
+                    </form>
                 </th:block>
                 <div class="text-end">
 
